src/test/deca/context/invalid/created/decl_var/double_declaration_bool.deca
// Description :
//    test d'une déclaration de variable de type bool déjà existante
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10:  La variable a est déjà déclarée.

{
bool a;
bool a; // a est déclaré deux fois
}